# containerware

./: .gitignore  .gitmodules  Makefile.am  README.md  config.c  configure.ac  container-debug.c  container-list.c  container.c  containerware.conf.sample  containerware.h  endpoint-dummy.c  host-list.c  host.c  instance-list.c  instance-thread.c  instance.c  listener-endpoint-thread.c  listener-list.c  listener-socket-thread.c  listener.c  log.c  main.c  module.c  p_containerware.h  ptrlist-impl.h  route.c  server-list.c  server.c  worker-list.c  worker-thread.c  worker.c
containers/: debug.c
containers/debug/: p_debug.h
containers/info/: Makefile.am  container.c  globalcss.c  info.c  instance.c  p_info.h  worker.c
endpoints/: Makefile.am
endpoints/dummy/: Makefile.am  endpoint.c  p_dummy.h  request.c  server.c
endpoints/fcgi/: Makefile.am  endpoint.c  p_fcgi.h  request.c  server.c
libcontainer/: Makefile.am  containerware.h  endpoint.c  p_cw.h  refcount.c
libship/: Makefile.am  p_ship.h  ship.c  ship.h
